add seo meta description

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ title: Your awesome title
 tagline: And Tagline
 email: gayanvirajith@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hi, I’m a professional UI/UX designrer and web developer. 
-  I love being minimal and creative.
+  Dinesh Video Team official website - Sri Lanka.
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "http://dineshvideo.com" # the base hostname & protocol for your site
 logourl: /assets/images/logo.png # Site logo
