add seo meta description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Your awesome title
-tagline: And Tagline
+title: Dinesh Video team
+tagline: 
 email: gayanvirajith@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Dinesh Video Team official website - Sri Lanka.
