--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline:
 email: gayanvirajith@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Dinesh Video Team official website - Sri Lanka.
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://dineshvideo.com" # the base hostname & protocol for your site
 logourl: /assets/images/logo.png # Site logo
 author: "Tom Warlker"
