--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Dinesh Video team
-tagline: "Call Us: 0777 - 124-1234"
+tagline: "Call Us: 077-629-5472"
 email: gayanvirajith@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Dinesh Video Team official website - Sri Lanka.
