--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ theme:
   disqus_shortname: gaya-webcreate
 
   # Google Analytics/Webmaster key, leave blank to ignore
-  google_analytics_key: 
+  google_analytics_key: UA-64782323-1
   google_webmaster_key: 9UbV0k0aWlmQZ-wAlkxftbJYZAx9sGlRG3ZtNnuddoU
 
 # Build settings
